backend/output.txt
    Checking tokensbyte-server v0.1.0 (/Volumes/D/aiwwwroot/tokensbyte/backend)
warning: variable does not need to be mutable
   --> src/api/auth.rs:187:13
    |
187 |         let mut initial_balance = state.config.default_user_quota;
    |             ----^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src/api/auth.rs:446:13
    |
446 |         let mut initial_balance = state.config.default_user_quota;
    |             ----^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`

warning: variable does not need to be mutable
   --> src/api/auth.rs:632:13
    |
632 |         let mut initial_balance = state.config.default_user_quota;
    |             ----^^^^^^^^^^^^^^^
    |             |
    |             help: remove this `mut`

warning: variable does not need to be mutable
   --> src/api/auth.rs:883:17
    |
883 |             let mut initial_balance = state.config.default_user_quota;
    |                 ----^^^^^^^^^^^^^^^
    |                 |
    |                 help: remove this `mut`

warning: variable does not need to be mutable
    --> src/api/auth.rs:1000:17
     |
1000 |             let mut initial_balance = state.config.default_user_quota;
     |                 ----^^^^^^^^^^^^^^^
     |                 |
     |                 help: remove this `mut`

error[E0277]: the trait bound `fn(State<Arc<...>>, ...) -> ... {create_channel_config}: Handler<_, _>` is not satisfied
    --> src/api/mod.rs:42:41
     |
  42 |         .route("/channel-configs", post(channel_configs::create_channel_config))
     |                                    ---- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Handler<_, _>` is not implemented for fn item `fn(State<Arc<AppState>>, Json<...>) -> ... {create_channel_config}`
     |                                    |
     |                                    required by a bound introduced by this call
     |
     = note: Consider using `#[axum::debug_handler]` to improve the error message
help: the following other types implement trait `Handler<T, S>`
    --> /Users/cgm5pro/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/axum-0.8.8/src/routing/method_routing.rs:1309:1
     |
1309 | / impl<S> Handler<(), S> for MethodRouter<S>
1310 | | where
1311 | |     S: Clone + 'static,
     | |_______________________^ `MethodRouter<S>` implements `Handler<(), S>`
     |
    ::: /Users/cgm5pro/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/axum-0.8.8/src/handler/mod.rs:313:1
     |
 313 | / impl<H, S, T, L> Handler<T, S> for Layered<L, H, T, S>
 314 | | where
 315 | |     L: Layer<HandlerService<H, T, S>> + Clone + Send + Sync + 'static,
 316 | |     H: Handler<T, S>,
...    |
 320 | |     T: 'static,
 321 | |     S: 'static,
     | |_______________^ `axum::handler::Layered<L, H, T, S>` implements `Handler<T, S>`
note: required by a bound in `post`
    --> /Users/cgm5pro/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/axum-0.8.8/src/routing/method_routing.rs:167:16
     |
 167 |             H: Handler<T, S>,
     |                ^^^^^^^^^^^^^ required by this bound in `post`
...
 445 | top_level_handler_fn!(post, POST);
     | ---------------------------------
     | |                     |
     | |                     required by a bound in this function
     | in this macro invocation
     = note: the full name for the type has been written to '/Volumes/D/aiwwwroot/tokensbyte/backend/target/debug/deps/tokensbyte_server-450b802766468e2e.long-type-5160746046825950417.txt'
     = note: consider using `--verbose` to print the full type name to the console
     = note: this error originates in the macro `top_level_handler_fn` (in Nightly builds, run with -Z macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
warning: `tokensbyte-server` (bin "tokensbyte-server") generated 5 warnings
error: could not compile `tokensbyte-server` (bin "tokensbyte-server") due to 1 previous error; 5 warnings emitted
